# mrn

./: .gitignore  CHECKLIST.md  CMakeLists.txt  README.md  build.md  file
docs/: architecture.md
include/algorithms/: algorithm_base.h  huffman_encoder.h  lz77_compressor.h  move_optimizer.h
include/core/: archive_format.h  compressor.h  config.h  plugin_interface.h  plugin_manager.h
include/io/: archive_writer.h  directory_scanner.h  file_io.h
include/utils/: logger.h  progress_tracker.h  thread_pool.h
plugins/: CMakeLists.txt
plugins/plugins_stub/: plugin_stub.cpp
src/: main.cpp
src/algorithms/: algorithm_registry.cpp  huffman_encoder.cpp  lz77_compressor.cpp  move_optimizer.cpp
src/core/: archive_format.cpp  compressor.cpp  config.cpp  plugin_manager.cpp
src/io/: archive_writer.cpp  directory_scanner.cpp  file_io.cpp
src/utils/: logger.cpp  progress_tracker.cpp  thread_pool.cpp
tests/: README.md
